force-app/main/default/objects/leaseworks__Claims__c/leaseworks__Claims__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <label>Claims Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>