force-app/main/default/objects/leaseworks__Claims__c/fields/Actual_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Actual_Reimbursement__c</fullName>
    <formula>Maintenance_Reserves__c + Actual_Contributions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>