force-app/main/default/objects/leaseworks__Claims__c/fields/All_Required_Records_Received__c.field-meta.xml
<CustomField>
    <fullName>All_Required_Records_Received__c</fullName>
    <inlineHelpText>Date on which all documentation per the applicable checklist has been received</inlineHelpText>
    <label>All Required Records Received</label>
    <type>Date</type>
</CustomField>