force-app/main/default/objects/leaseworks__Claims__c/fields/Associated_Contract__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Input the related lease</inlineHelpText>
    <label>Associated Contract</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>MR Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>