force-app/main/default/objects/leaseworks__Claims__c/fields/Associated_Lease__c.field-meta.xml
<CustomField>
    <fullName>Associated_Lease__c</fullName>
    <formula>leaseworks__Assembly__r.leaseworks__Attached_Aircraft__r.leaseworks__Lease__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Lease</label>
    <type>Text</type>
</CustomField>