force-app/main/default/objects/leaseworks__Claims__c/fields/ATO_Maintenance_Reserves__c.field-meta.xml
<CustomField>
    <fullName>ATO_Maintenance_Reserves__c</fullName>
    <inlineHelpText>Input expected MR amount per the ATO</inlineHelpText>
    <label>ATO Maintenance Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>