force-app/main/default/objects/leaseworks__Claims__c/fields/ATO_Net_Qualifying__c.field-meta.xml
<CustomField>
    <fullName>ATO_Net_Qualifying__c</fullName>
    <formula>ATO_Cost__c - ATO_Exclusions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ATO Calculation of Net Qualifying amount</inlineHelpText>
    <label>ATO Net Qualifying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>