force-app/main/default/objects/leaseworks__Claims__c/fields/CAP_Team_Responsible__c.field-meta.xml
<CustomField>
    <fullName>CAP_Team_Responsible__c</fullName>
    <description>Report field to identify team responsible for current stage.</description>
    <formula>CASE(
  TEXT(leaseworks__Claim_Status__c),

  &quot;Open&quot;, &quot;Lease Management&quot;,
  &quot;Future Claim&quot;, &quot;Lease Management&quot;,
  &quot;Technical Review&quot;, &quot;External Reviewer / Powerplant&quot;,
  &quot;Operator Engagement&quot;, &quot;With Operator&quot;,
  &quot;Technical Head/CTO Review&quot;, &quot;PFM / I&amp;S&quot;,
  &quot;Finance/Accounting Review&quot;, &quot;Lease Management&quot;,
  &quot;CTO Sign-off&quot;, &quot;Approvers&quot;,
  &quot;Approved&quot;, &quot;Lease Management&quot;,
  &quot;Finalised&quot;, &quot;Lease Management&quot;,

  &quot;Unmapped&quot;
)</formula>
    <inlineHelpText>Report field to identify team responsible for current stage.</inlineHelpText>
    <label>Team Responsible</label>
    <type>Text</type>
</CustomField>