force-app/main/default/objects/leaseworks__Claims__c/fields/Eligible_Cost__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Cost__c</fullName>
    <label>Eligible Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>