force-app/main/default/objects/leaseworks__Claims__c/fields/Eligible_Cost_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Cost_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible Cost Agreed</label>
    <type>Checkbox</type>
</CustomField>