force-app/main/default/objects/leaseworks__Claims__c/fields/Eligible_Cost_Date_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Cost_Date_Agreed__c</fullName>
    <label>Eligible Cost Date Agreed</label>
    <type>Date</type>
</CustomField>