force-app/main/default/objects/leaseworks__Claims__c/fields/Eligible_Cost_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Cost_Date_Sent__c</fullName>
    <label>Eligible Cost Date Sent</label>
    <type>Date</type>
</CustomField>