force-app/main/default/objects/leaseworks__Claims__c/fields/Eligible_Cost_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Cost_Sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible Cost Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>