force-app/main/default/objects/leaseworks__Claims__c/fields/Executive_Summary_and_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_and_Recommendation__c</fullName>
    <description>Summary of claim and recommendation</description>
    <inlineHelpText>Document summary of claim and recommendation</inlineHelpText>
    <label>Executive Summary and Recommendation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>