force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Accounting_Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Comment__c</fullName>
    <label>Accounting Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>