force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balance_Amount__c</fullName>
    <description>The current payable balance after any payouts</description>
    <formula>leaseworks__Total_Claim_Payable_Amount__c -  leaseworks__Total_Claim_Payout_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current payable balance after any payouts</inlineHelpText>
    <label>Total Claim Payable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>