force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__CFO_Sign_off_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CFO_Sign_off_Date__c</fullName>
    <label>CFO Sign-off Date</label>
    <type>Date</type>
</CustomField>