force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Claim_Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Claim_Description__c</fullName>
    <inlineHelpText>Short free text Claim description, usually describes a work scope of the Shop Visit: for example Level III workscope and LLP replacement.</inlineHelpText>
    <label>Claim Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>