force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Claim_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Claim_Reference_Type__c</fullName>
    <description>Used for internal backend calculations</description>
    <label>Claim Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Induction Date</fullName>
            </value>
            <value>
                <fullName>Removal Date</fullName>
            </value>
            <value>
                <fullName>Release Date</fullName>
            </value>
            <value>
                <fullName>Installation Date</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>