force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Data_Verified_for_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Data_Verified_for_Accuracy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Verified for Accuracy</label>
    <type>Checkbox</type>
</CustomField>