force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Date_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Installation__c</fullName>
    <formula>leaseworks__Event__r.leaseworks__Date_of_Installation__c</formula>
    <inlineHelpText>Date of Installation is updated from the Assembly Event selected</inlineHelpText>
    <label>Date of Installation</label>
    <type>Date</type>
</CustomField>