force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Date_Of_Removal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Removal__c</fullName>
    <formula>leaseworks__Event__r.leaseworks__Date_Of_Removal__c</formula>
    <inlineHelpText>Date of Removal is updated from the Assembly Event selected</inlineHelpText>
    <label>Date Of Removal</label>
    <type>Date</type>
</CustomField>