force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Dispute_Signed_Off_by_Technical_Head__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dispute_Signed_Off_by_Technical_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispute Signed Off by Technical Head</label>
    <type>Checkbox</type>
</CustomField>