force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__External_Link__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__External_Link__c</fullName>
    <description>Link to the External document management portal, only for information</description>
    <inlineHelpText>Link to the External document management portal, only for information</inlineHelpText>
    <label>External Document Link</label>
    <type>Url</type>
</CustomField>