force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Fund_Balance_at_Date_of_Induction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fund_Balance_at_Date_of_Induction__c</fullName>
    <label>Fund Balance at Date of Induction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>