force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Induction_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Induction_Date__c</fullName>
    <formula>leaseworks__Event__r.leaseworks__Start_Date__c</formula>
    <inlineHelpText>Induction Date is updated from the Assembly Event selected</inlineHelpText>
    <label>Induction Date</label>
    <type>Date</type>
</CustomField>