force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Legal_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Legal_Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Sign-off</label>
    <type>Checkbox</type>
</CustomField>