force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Lessor_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Comments__c</fullName>
    <label>Lessor Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>