force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Tech_Review_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tech_Review_Approval_Date__c</fullName>
    <label>Tech Approval Date</label>
    <type>Date</type>
</CustomField>