force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Technical_Head_Review_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Head_Review_Approval_Date__c</fullName>
    <label>Technical Head Review Approval Date</label>
    <type>Date</type>
</CustomField>