force-app/main/default/objects/leaseworks__Claims__c/fields/leaseworks__Y_Hidden_Available_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Available_Reference_Date__c</fullName>
    <inlineHelpText>This field reflects the default MR Claim reference date as set on Assembly MR Info. Usually defined by the Lease Agreement</inlineHelpText>
    <label>Available Reference Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>