force-app/main/default/objects/leaseworks__Claims__c/fields/PFM_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>PFM_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculation Reviewed By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Portfolio_Finance_Reviewed_By</relationshipName>
    <type>Lookup</type>
</CustomField>