force-app/main/default/objects/leaseworks__Claims__c/fields/pro_Approval_Rejected__c.field-meta.xml
<CustomField>
    <fullName>pro_Approval_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets checked as an approval process field update upon a rejection</description>
    <label>Approval Rejected</label>
    <type>Checkbox</type>
</CustomField>