force-app/main/default/objects/leaseworks__Claims__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <inlineHelpText>Date of Completion of Peer Review</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>