force-app/main/default/objects/leaseworks__Claims__c/validationRules/leaseworks__Approved_Claim_Amount_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Approved_Claim_Amount_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Claims. Approved Claim Amount never accepts negative value. If negative value is entered then shows this error &apos;Claim amount cannot be negative.Please make sure this is set correctly before saving the record&apos;</description>
    <errorConditionFormula>leaseworks__Approved_Claim_Amount__c &lt; 0  ||  leaseworks__Estimated_Claim_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Claim amount cannot be negative. Please make sure this is set correctly before saving the record.</errorMessage>
</ValidationRule>