force-app/main/default/objects/leaseworks__Claims__c/validationRules/leaseworks__AssociatedEventReqForClaim.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__AssociatedEventReqForClaim</fullName>
    <active>false</active>
    <description>depricated: Please update the Associated Event on the Supplemental Rent before creating a new Claim</description>
    <errorConditionFormula>False</errorConditionFormula>
    <errorMessage>Please update the Associated Event on the Supplemental Rent before creating a new Claim</errorMessage>
</ValidationRule>