force-app/main/default/objects/leaseworks__Claims__c/validationRules/leaseworks__Validation_on_Supp.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Validation_on_Supp</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND(ISNEW(), leaseworks__Event__c != null),  IF(  leaseworks__Event__r.leaseworks__Aircraft_F__c  !=    leaseworks__Supplemental_Rent__r.leaseworks__Asset__c   , true, false) , false)</errorConditionFormula>
    <errorDisplayField>leaseworks__Supplemental_Rent__c</errorDisplayField>
    <errorMessage>Please select Supplemental Rent associated with this asset only</errorMessage>
</ValidationRule>