force-app/main/default/objects/leaseworks__Claims__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Supplemental_Rent__c</columns>
    <columns>leaseworks__Event__c</columns>
    <columns>leaseworks__Release_Date__c</columns>
    <columns>leaseworks__Approved_Claim_Amount__c</columns>
    <columns>leaseworks__Claim_Status__c</columns>
    <columns>leaseworks__Total_Claim_Payout_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>