force-app/main/default/objects/leaseworks__Claims__c/listViews/Awaiting_Portfolio_Review.listView-meta.xml
<ListView>
    <fullName>Awaiting_Portfolio_Review</fullName>
    <columns>pro_Claim_Number_Unique__c</columns>
    <columns>NAME</columns>
    <columns>Associated_Contract__c</columns>
    <columns>leaseworks__Assembly__c</columns>
    <columns>leaseworks__Supplemental_Rent__c</columns>
    <columns>leaseworks__Event__c</columns>
    <columns>Actual_Reimbursement__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Claim_Status__c</field>
        <operation>equals</operation>
        <value>Technical Head/CTO Review</value>
    </filters>
    <label>Awaiting Portfolio Review</label>
</ListView>