force-app/main/default/objects/leaseworks__Claims__c/listViews/Cancelled_Claims.listView-meta.xml
<ListView>
    <fullName>Cancelled_Claims</fullName>
    <columns>pro_Claim_Number_Unique__c</columns>
    <columns>NAME</columns>
    <columns>Associated_Contract__c</columns>
    <columns>leaseworks__Assembly__c</columns>
    <columns>pro_Claim_Cancellation_Date__c</columns>
    <columns>pro_Claim_Cancellation_Reason__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_Claim_Cancelled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cancelled Claims</label>
</ListView>