force-app/main/default/objects/leaseworks__Claims__c/listViews/SpiceJet_Claims.listView-meta.xml
<ListView>
    <fullName>SpiceJet_Claims</fullName>
    <columns>pro_Claim_Number_Unique__c</columns>
    <columns>NAME</columns>
    <columns>Associated_Contract__c</columns>
    <columns>leaseworks__Assembly__c</columns>
    <columns>leaseworks__Supplemental_Rent__c</columns>
    <columns>leaseworks__Event__c</columns>
    <columns>leaseworks__Release_Date__c</columns>
    <columns>leaseworks__Approved_Claim_Amount__c</columns>
    <columns>leaseworks__Claim_Status__c</columns>
    <columns>leaseworks__Total_Claim_Payout_Amount__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>leaseworks__Balance_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_Contract__c</field>
        <operation>contains</operation>
        <value>spicejet</value>
    </filters>
    <filters>
        <field>leaseworks__Claim_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>SpiceJet Claims</label>
    <sharedTo>
        <group>Lease_Management</group>
    </sharedTo>
</ListView>