force-app/main/default/objects/leaseworks__Claims__c/listViews/Unpaid_Claims.listView-meta.xml
<ListView>
    <fullName>Unpaid_Claims</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Event__c</columns>
    <columns>leaseworks__Approved_Claim_Amount__c</columns>
    <columns>leaseworks__CFO_Sign_off_Date__c</columns>
    <columns>leaseworks__Total_Claim_Payout_Amount__c</columns>
    <columns>leaseworks__Balance_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Unpaid Mtx Claims</label>
</ListView>